// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider activeColor 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="background: rgb(238, 10, 36); left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider barHeight 1`] = `
<div>
  <div
    class="rc-slider"
    style="height: 2px;"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider button 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="custom-button"
        >
          button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider button is function 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="width: 0%; left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="custom-button"
        >
          0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider buttonSize 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
          style="width: 20px; height: 20px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider inactiveColor 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="background: rgb(233, 233, 233); left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider max 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider min 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider shallows correctly 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should render left button and right button correctly under rang mode 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="width: 60%; left: 20%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--left"
        role="slider"
        tabindex="0"
      >
        <div
          class="custom-button"
        >
          leftButton
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="80"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="custom-button"
        >
          rightButton
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider step 1`] = `
<div>
  <div
    class="rc-slider"
  >
    <div
      class="rc-slider__bar"
      style="left: 0%;"
    >
      <div
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider vertical 1`] = `
<div>
  <div
    class="rc-slider rc-slider--vertical"
  >
    <div
      class="rc-slider__bar"
      style="top: 0%;"
    >
      <div
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        class="rc-slider__button-wrapper rc-slider__button-wrapper--right"
        role="slider"
        tabindex="0"
      >
        <div
          class="rc-slider__button"
        />
      </div>
    </div>
  </div>
</div>
`;
